syntax = "proto3";

package http_adapter;

service HttpAdapter {
    rpc SendHTTPRequest(CanisterHttpRequest) returns (CanisterHttpResponse);
}

message HttpHeader {
  string name = 1;
  bytes value = 2;
}

message CanisterHttpRequest {
  string url = 1;
  bytes body = 2;
  repeated HttpHeader headers = 3;
}

message CanisterHttpResponse {
  uint32 status = 1;
  repeated HttpHeader headers = 2;
  bytes content = 3;
}